--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 github.client.id=cb08cf330a85170ce228
 github.client.secret=ed70e829cd4317de60367aa23719bd39cad2ca47
 github.redirect.uri=http://localhost:8080/callback
+
+spring.datasource.url=jdbc:h2:~/community
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.h2.Driver
