--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.datasource.url=jdbc:h2:~/community
 spring.datasource.username=sa
 spring.datasource.password=123
 spring.datasource.driver-class-name=org.h2.Driver
+
+spring.datasource.platform=h2
+#开启h2数据库console访问
+spring.h2.console.enabled=true
+logging.level.root=INFO
