发布功能，问题插入数据库后返回首页

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.datasource.platform=h2
 #开启h2数据库console访问
 spring.h2.console.enabled=true
 logging.level.root=INFO
+
+spring.thymeleaf.cache=false
