进入首页时显示问题列表

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.h2.console.enabled=true
 logging.level.root=INFO
 
 spring.thymeleaf.cache=false
+mybatis.configuration.map-underscore-to-camel-case=true
