--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,11 @@ spring.datasource.password=123
 spring.datasource.driver-class-name=org.h2.Driver
 
 spring.datasource.platform=h2
-#开启h2数据库console访问
+#
 spring.h2.console.enabled=true
 logging.level.root=INFO
 
 spring.thymeleaf.cache=false
 mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.type-aliases-package=life.ycz.community.mapper
+mybatis.mapper-locations=classpath:mapper/*.xml
